--- a/thailand.html
+++ b/thailand.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Hykin Overseas Training</title>
+    <title>Hykin Overseas Study</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="Free HTML Templates" name="keywords">
     <meta content="Free HTML Templates" name="description">
@@ -69,54 +69,8 @@
     <!-- Navbar Start -->
     <div class="container-fluid">
         <div class="row border-top px-xl-5">
-            <!-- <div class="col-lg-3 d-none d-lg-block">
-                <a class="d-flex align-items-center justify-content-between bg-secondary w-100 text-decoration-none"
-                    data-toggle="collapse" href="#navbar-vertical" style="height: 67px; padding: 0 30px;">
-                    <h5 class="text-primary m-0"><i class="fa fa-book-open mr-2"></i>Subjects</h5>
-                    <i class="fa fa-angle-down text-primary"></i>
-                </a>
-                <nav class="collapse position-absolute navbar navbar-vertical navbar-light align-items-start p-0 border border-top-0 border-bottom-0 bg-light"
-                    id="navbar-vertical" style="width: calc(100% - 30px); z-index: 9;">
-                    <div class="navbar-nav w-100">
-                        <div class="nav-item dropdown">
-                            <a href="#" class="nav-link" data-toggle="dropdown">Education<i
-                                    class="fa fa-angle-down float-right mt-1"></i></a>
-                            <div class="dropdown-menu position-absolute bg-secondary border-0 rounded-0 w-100 m-0">
-                                <a href="" class="dropdown-item">Study</a>
-                                <a href="" class="dropdown-item">Training</a>
-                            </div>
-                        </div>
-                        <div class="nav-item dropdown">
-                            <a href="#" class="nav-link" data-toggle="dropdown">Visa<i
-                                    class="fa fa-angle-down float-right mt-1"></i></a>
-                            <div class="dropdown-menu position-absolute bg-secondary border-0 rounded-0 w-100 m-0">
-                                <a href="" class="dropdown-item">Visit & Tourist Visa</a>
-                                <a href="" class="dropdown-item">Work Visa</a>
-                                <a href="" class="dropdown-item">Business Visa</a>
-                            </div>
-                        </div>
-                        <div class="nav-item dropdown">
-                            <a href="#" class="nav-link" data-toggle="dropdown">Tours & Travells<i
-                                    class="fa fa-angle-down float-right mt-1"></i></a>
-                            <div class="dropdown-menu position-absolute bg-secondary border-0 rounded-0 w-100 m-0">
-                                <a href="" class="dropdown-item">Thailand</a>
-                                <a href="" class="dropdown-item">Singapoor</a>
-
-                            </div>
-                        </div>
-                        <a href="" class="nav-item nav-link">Apps Design</a>
-
-                    </div>
-                </nav>
-            </div> -->
             <div class="col-lg-9">
                 <nav class="navbar navbar-expand-lg bg-light navbar-light py-3 py-lg-0 px-0">
-                    <!-- <a href="" class="text-decoration-none d-block d-lg-none">
-                        <h1 class="m-0"><span class="text-primary">E</span>COURSES</h1>
-                    </a> -->
-                    <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
-                        <span class="navbar-toggler-icon"></span>
-                    </button>
                     <div class="collapse navbar-collapse justify-content-between" id="navbarCollapse">
                         <div class="navbar-nav py-0">
                             <a href="index.html" class="nav-item nav-link">Home</a>
@@ -129,7 +83,7 @@
                                         <a href="#" class="dropdown-item" data-toggle="dropdown">Education<i
                                                 class="fa fa-angle-down float-right mt-1"></i></a>
                                         <div class="dropdown-item position-relative bg-secondary rounded-0 w-100 m-0">
-                                            <a href="study.html" class="dropdown-item">Study</a>
+                                            <a href="study.html" class="dropdown-item active">Study</a>
                                             <a href="training.html" class="dropdown-item">Training</a>
                                         </div>
                                     </div>
@@ -153,7 +107,7 @@
                                                 class="fa fa-angle-down float-right mt-1"></i></a>
                                         <div
                                             class="dropdown-item position-absolute bg-secondary border-0 rounded-0 w-100 m-0">
-                                            <a href="" class="dropdown-item">Thailand</a>
+                                            <a href="thailand.html" class="dropdown-item">Thailand</a>
                                             <a href="" class="dropdown-item">Singapoor</a>
                                         </div>
                                     </div>
@@ -169,7 +123,6 @@
                             <a href="contact.html" class="nav-item nav-link">Contact</a>
                         </div>
                     </div>
-
                 </nav>
             </div>
         </div>
@@ -181,11 +134,11 @@
     <div class="container-fluid page-header" style="margin-bottom: 90px;">
         <div class="container">
             <div class="d-flex flex-column justify-content-center" style="min-height: 300px">
-                <h3 class="display-4 text-white text-uppercase">Visit & Tourist Visa</h3>
+                <h3 class="display-4 text-white text-uppercase">Thailand</h3>
                 <div class="d-inline-flex text-white">
                     <p class="m-0 text-uppercase"><a class="text-white" href="">Home</a></p>
                     <i class="fa fa-angle-double-right pt-1 px-3"></i>
-                    <p class="m-0 text-uppercase">Visit & Tourist Visa</p>
+                    <p class="m-0 text-uppercase">Thailand</p>
                 </div>
             </div>
         </div>
@@ -194,7 +147,7 @@
 
 
     <!-- Detail Start -->
-    <div class="container-fluid py-0">
+    <div class="container-fluid py-5">
         <div class="container py-5">
             <div class="row">
                 <div class="col-lg-8">
@@ -273,7 +226,7 @@
 
                 </div>
 
-                <div class="col-lg-4 mt-5 mt-lg-0 mb-5 py-5 px-4">
+                <div class="col-lg-4 mt-5 mt-lg-0">
                     <!-- Author Bio -->
                     <!-- <div class="d-flex flex-column text-center bg-dark rounded mb-5 py-5 px-4">
                         <img src="img/user.jpg" class="img-fluid rounded-circle mx-auto mb-3" style="width: 100px;">
@@ -301,14 +254,14 @@
                         <h3 class="text-uppercase mb-4" style="letter-spacing: 5px;">Categories</h3>
                         <ul class="list-group list-group-flush">
                             <li class="list-group-item d-flex justify-content-between align-items-center px-0">
-                                <a href="" class="text-decoration-none h6 m-0">Stock Marketing</a>
+                                <a href="" class="text-decoration-none h6 m-0">Study In Singapore</a>
                                 <span class="badge badge-primary badge-pill">150</span>
                             </li>
                             <li class="list-group-item d-flex justify-content-between align-items-center px-0">
-                                <a href="" class="text-decoration-none h6 m-0">Software Training</a>
+                                <a href="" class="text-decoration-none h6 m-0">Study in Cyprus</a>
                                 <span class="badge badge-primary badge-pill">131</span>
                             </li>
-                            <!-- <li class="list-group-item d-flex justify-content-between align-items-center px-0">
+                            <li class="list-group-item d-flex justify-content-between align-items-center px-0">
                                 <a href="" class="text-decoration-none h6 m-0">Study in France</a>
                                 <span class="badge badge-primary badge-pill">78</span>
                             </li>
@@ -319,7 +272,7 @@
                             <li class="list-group-item d-flex justify-content-between align-items-center px-0">
                                 <a href="" class="text-decoration-none h6 m-0">Study in Other Schengen</a>
                                 <span class="badge badge-primary badge-pill">98</span>
-                            </li> -->
+                            </li>
                         </ul>
                     </div>
 
@@ -350,7 +303,7 @@
                     </div>
 
                     <!-- Tag Cloud -->
-                    <div class="mb-4">
+                    <div class="mb-5">
                         <h3 class="text-uppercase mb-4" style="letter-spacing: 5px;">Tag Cloud</h3>
                         <div class="d-flex flex-wrap m-n1">
                             <a href="" class="btn btn-outline-primary m-1">Design</a>
@@ -393,55 +346,49 @@
                 <div class="container-fluid py-5">
                     <div class="container pt-5 pb-3">
                         <div class="text-center mb-5">
-                            <h5 class="text-primary text-uppercase mb-3" style="letter-spacing: 5px;">Training</h5>
-                            <h1>Training Courses</h1>
+                            <h5 class="text-primary text-uppercase mb-3" style="letter-spacing: 5px;">clients</h5>
+                            <h1>Meet Our clients</h1>
                         </div>
                         <div class="row">
-                            <div class="col-md-6 col-lg-6 text-center team mb-4">
+                            <div class="col-md-6 col-lg-3 text-center team mb-4">
                                 <div class="team-item rounded overflow-hidden mb-2">
                                     <div class="team-img position-relative">
-                                        <img class="img-fluid" src="img/training/training-1.jpg" alt="">
+                                        <img class="img-fluid" src="img/team/team-1.jpg" alt="">
                                         <div class="team-social">
-                                            <a class="btn btn-outline-light mx-1" href="stock-market.html"
-                                                role="button">More Details</a>
-                                            <!-- <button class=" btn btn-outline-light mx-1">More Details</button> -->
-                                            <!-- <a class="btn btn-outline-light btn-square mx-1" href="#"><i
+                                            <a class="btn btn-outline-light btn-square mx-1" href="#"><i
                                                     class="fab fa-twitter"></i></a>
                                             <a class="btn btn-outline-light btn-square mx-1" href="#"><i
                                                     class="fab fa-facebook-f"></i></a>
                                             <a class="btn btn-outline-light btn-square mx-1" href="#"><i
-                                                    class="fab fa-linkedin-in"></i></a> -->
+                                                    class="fab fa-linkedin-in"></i></a>
                                         </div>
                                     </div>
-                                    <div class="bg-secondary p-4">
-                                        <h5 class="m-0">Stock Market</h5>
-                                        <!-- <p class="m-0">Stock Market</p> -->
+                                    <div class="bg-secondary p-3">
+                                        <h5>Singapore</h5>
+                                        <p class="m-0"></p>
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-md-6 col-lg-6 text-center team mb-4">
+                            <div class="col-md-6 col-lg-3 text-center team mb-4">
                                 <div class="team-item rounded overflow-hidden mb-2">
                                     <div class="team-img position-relative">
-                                        <img class="img-fluid" src="img/training/training-2.jpg" alt="">
+                                        <img class="img-fluid" src="img/team/team-2.jpg" alt="">
                                         <div class="team-social">
-                                            <a class="btn btn-outline-light mx-1" href="software-training.html"
-                                                role="button">More Details</a>
-                                            <!-- <button class="btn btn-outline-light mx-1"></button> -->
-                                            <!-- <a class="btn btn-outline-light btn-square mx-1" href="#"><i
+                                            <a class="btn btn-outline-light btn-square mx-1" href="#"><i
                                                     class="fab fa-twitter"></i></a>
                                             <a class="btn btn-outline-light btn-square mx-1" href="#"><i
                                                     class="fab fa-facebook-f"></i></a>
                                             <a class="btn btn-outline-light btn-square mx-1" href="#"><i
-                                                    class="fab fa-linkedin-in"></i></a> -->
+                                                    class="fab fa-linkedin-in"></i></a>
                                         </div>
                                     </div>
-                                    <div class="bg-secondary p-4">
-                                        <h5 class="m-0">Software Training</h5>
-                                        <!-- <p class="m-0">Software Training</p> -->
+                                    <div class="bg-secondary p-3">
+                                        <h5>Cyprus</h5>
+                                        <p class="m-0"></p>
                                     </div>
                                 </div>
                             </div>
-                            <!-- <div class="col-md-6 col-lg-3 text-center team mb-4">
+                            <div class="col-md-6 col-lg-3 text-center team mb-4">
                                 <div class="team-item rounded overflow-hidden mb-2">
                                     <div class="team-img position-relative">
                                         <img class="img-fluid" src="img/team/team-3.jpg" alt="">
@@ -454,13 +401,13 @@
                                                     class="fab fa-linkedin-in"></i></a>
                                         </div>
                                     </div>
-                                    <div class="bg-secondary p-4">
-                                        <h5>Jhon Doe</h5>
-                                        <p class="m-0">France</p>
+                                    <div class="bg-secondary p-3">
+                                        <h5>France</h5>
+                                        <p class="m-0"></p>
                                     </div>
                                 </div>
-                            </div> -->
-                            <!-- <div class="col-md-6 col-lg-3 text-center team mb-4">
+                            </div>
+                            <div class="col-md-6 col-lg-3 text-center team mb-4">
                                 <div class="team-item rounded overflow-hidden mb-2">
                                     <div class="team-img position-relative">
                                         <img class="img-fluid" src="img/team/team-4.jpg" alt="">
@@ -473,12 +420,12 @@
                                                     class="fab fa-linkedin-in"></i></a>
                                         </div>
                                     </div>
-                                    <div class="bg-secondary p-4">
-                                        <h5>Jhon Doe</h5>
-                                        <p class="m-0">Ireland</p>
+                                    <div class="bg-secondary p-3">
+                                        <h5>Ireland</h5>
+                                        <p class="m-0"></p>
                                     </div>
                                 </div>
-                            </div> -->
+                            </div>
                         </div>
                     </div>
                 </div>
