--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                                                 class="fa fa-angle-down float-right mt-1"></i></a>
                                         <div
                                             class="dropdown-item position-relative bg-secondary border-0 rounded-0 w-100 m-0">
-                                            <a href="#" class="dropdown-item">Thailand</a>
+                                            <a href="thailand.html" class="dropdown-item">Thailand</a>
                                             <a href="#" class="dropdown-item">Singapoor</a>
                                         </div>
                                     </div>
