--- a/index.html
+++ b/index.html
@@ -59,8 +59,6 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.6.0/js/bootstrap.min.js"
         integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
         crossorigin="anonymous"></script>
-
-
 </head>
 
 <body>
@@ -115,7 +113,9 @@
                             <a href="index.html" class="nav-item nav-link active">Home</a>
                             <a href="about.html" class="nav-item nav-link">About</a>
                             <div class="nav-item dropdown">
+                                <!-- <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Services</a> -->
                                 <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Services</a>
+
                                 <div class="dropdown-menu rounded-0 m-0">
                                     <!-- Education dropdown -->
                                     <div class="nav-item dropdown">
@@ -152,21 +152,7 @@
                                 </div>
                             </div>
 
-                            <div class="nav-item dropdown">
-                                <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">services</a>
-                                <div class="dropdown-menu rounded-0 m-0">
-                                    <!-- <a href="blog.html" class="dropdown-item">Education</a> -->
-                                    <div class="dropdown-submenu">
-                                        <a href="#" class="dropdown-item dropdown-toggle ">Education</a>
-                                        <div class="dropdown-menu position-relative bg-secondary rounded-0 m-0">
-                                            <a href="blog.html" class="dropdown-item">Study</a>
-                                            <a href="blog.html" class="dropdown-item">Training</a>
-                                        </div>
-                                    </div>
-                                    <a href="single.html" class="dropdown-item">Blog Detail</a>
-                                </div>
-                            </div>
-                            
+
                             <!-- <div class="nav-item dropdown">
                                 <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Blog</a>
                                 <div class="dropdown-menu rounded-0 m-0">
