--- a/study-in-singapore.html
+++ b/study-in-singapore.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Hykin Overseas Training</title>
+    <title>Hykin Overseas Study</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="Free HTML Templates" name="keywords">
     <meta content="Free HTML Templates" name="description">
@@ -83,8 +83,8 @@
                                         <a href="#" class="dropdown-item" data-toggle="dropdown">Education<i
                                                 class="fa fa-angle-down float-right mt-1"></i></a>
                                         <div class="dropdown-item position-relative bg-secondary rounded-0 w-100 m-0">
-                                            <a href="study.html" class="dropdown-item">Study</a>
-                                            <a href="training.html" class="dropdown-item active">Training</a>
+                                            <a href="study.html" class="dropdown-item active">Study</a>
+                                            <a href="training.html" class="dropdown-item">Training</a>
                                         </div>
                                     </div>
 
@@ -130,14 +130,14 @@
 
 
     <!-- Header Start -->
-    <div class="container-fluid page-header-training" style="margin-bottom: 90px;">
+    <div class="container-fluid page-header-study" style="margin-bottom: 90px;">
         <div class="container">
             <div class="d-flex flex-column justify-content-center" style="min-height: 300px">
-                <h3 class="display-4 text-white text-uppercase">Training</h3>
+                <h3 class="display-4 text-white text-uppercase">Singapore</h3>
                 <div class="d-inline-flex text-white">
                     <p class="m-0 text-uppercase"><a class="text-white" href="">Home</a></p>
                     <i class="fa fa-angle-double-right pt-1 px-3"></i>
-                    <p class="m-0 text-uppercase">Training</p>
+                    <p class="m-0 text-uppercase">Study</p>
                 </div>
             </div>
         </div>
@@ -146,23 +146,37 @@
 
 
     <!-- Detail Start -->
-    <div class="container-fluid py-0">
+    <div class="container-fluid py-5">
         <div class="container py-5">
             <div class="row">
                 <div class="col-lg-8">
                     <div class="mb-5">
                         <!-- <h6 class="text-primary mb-3">Jan 01, 2050</h6> -->
                         <h1 class="mb-5">Studying abroad is always the best way to discover yourself.</h1>
-                        <img class="img-fluid rounded w-100 mb-4" src="img/carousel-1.jpg" alt="Image">
-                        <p>Studying abroad can be a life-changing experience. It offers the opportunity to immerse
-                            oneself in a new culture, learn a new language, and gain a unique perspective on the world.
-                            Additionally, studying abroad can enhance one's academic and professional prospects by
-                            providing access to top-notch educational institutions and networking opportunities.
-                            However, it is important to carefully research and plan for a study abroad experience to
-                            ensure a successful and safe journey. Factors to consider include the destination country's
-                            culture, language, safety, and visa requirements, as well as the academic program and cost.
-                            With proper preparation and an open mind, studying abroad can be an incredibly rewarding
-                            adventure that broadens one's horizons and enriches one's life.</p>
+                        <img class="img-fluid rounded w-100 mb-4" src="img/study-banner/study-in-singapore.png"
+                            alt="Image">
+                        <p>Singapore is a top destination for international students looking to pursue higher education.
+                            The city-state is known for its excellent education system, world-class universities, and
+                            diverse multicultural society.
+
+                            There are many benefits to studying in Singapore including the opportunity to learn from
+                            highly qualified professors, access to state-of-the-art facilities, and exposure to a
+                            dynamic and thriving economy. Additionally, Singapore is a safe and welcoming country that
+                            offers a high quality of life for students.
+
+                            Some of the top universities in Singapore include the National University of Singapore,
+                            Nanyang Technological University, and Singapore Management University. These universities
+                            offer a wide range of programs in various fields such as engineering, business, law, and
+                            medicine.
+
+                            International students who wish to study in Singapore can apply for scholarships and
+                            financial aid to help cover the cost of tuition and living expenses. There are also many
+                            resources available to assist students with the visa application process and settling into
+                            life in Singapore.
+
+                            Overall, studying in Singapore is a fantastic opportunity for students who are looking to
+                            gain a world-class education, experience a new culture, and prepare for a successful career
+                            in the global marketplace.</p>
                         <h2 class="mb-4">Training in Stock Market and Software Development.</h2>
                         <img class="img-fluid rounded w-50 float-left mr-4 mb-3" src="img/blog-1.jpg" alt="Image">
                         <p>If you are interested in a career that combines finance with technology, then pursuing
@@ -225,7 +239,7 @@
 
                 </div>
 
-                <div class="col-lg-4 mt-5 mt-lg-0 mb-5 py-5 px-4">
+                <div class="col-lg-4 mt-5 mt-lg-0">
                     <!-- Author Bio -->
                     <!-- <div class="d-flex flex-column text-center bg-dark rounded mb-5 py-5 px-4">
                         <img src="img/user.jpg" class="img-fluid rounded-circle mx-auto mb-3" style="width: 100px;">
@@ -253,25 +267,26 @@
                         <h3 class="text-uppercase mb-4" style="letter-spacing: 5px;">Categories</h3>
                         <ul class="list-group list-group-flush">
                             <li class="list-group-item d-flex justify-content-between align-items-center px-0">
-                                <a href="" class="text-decoration-none h6 m-0">Stock Marketing</a>
+                                <a href="study-in-singapore.html" class="text-decoration-none h6 m-0 active">Study In
+                                    Singapore</a>
                                 <span class="badge badge-primary badge-pill">150</span>
                             </li>
                             <li class="list-group-item d-flex justify-content-between align-items-center px-0">
-                                <a href="" class="text-decoration-none h6 m-0">Software Training</a>
+                                <a href="study-in-cyprus.html" class="text-decoration-none h6 m-0">Study in Cyprus</a>
                                 <span class="badge badge-primary badge-pill">131</span>
                             </li>
-                            <!-- <li class="list-group-item d-flex justify-content-between align-items-center px-0">
-                                <a href="" class="text-decoration-none h6 m-0">Study in France</a>
+                            <li class="list-group-item d-flex justify-content-between align-items-center px-0">
+                                <a href="study-in-france.html" class="text-decoration-none h6 m-0">Study in France</a>
                                 <span class="badge badge-primary badge-pill">78</span>
                             </li>
                             <li class="list-group-item d-flex justify-content-between align-items-center px-0">
-                                <a href="" class="text-decoration-none h6 m-0">Study in Ireland</a>
+                                <a href="study-in-ireland.html" class="text-decoration-none h6 m-0">Study in Ireland</a>
                                 <span class="badge badge-primary badge-pill">56</span>
                             </li>
                             <li class="list-group-item d-flex justify-content-between align-items-center px-0">
                                 <a href="" class="text-decoration-none h6 m-0">Study in Other Schengen</a>
                                 <span class="badge badge-primary badge-pill">98</span>
-                            </li> -->
+                            </li>
                         </ul>
                     </div>
 
@@ -302,7 +317,7 @@
                     </div>
 
                     <!-- Tag Cloud -->
-                    <div class="mb-4">
+                    <div class="mb-5">
                         <h3 class="text-uppercase mb-4" style="letter-spacing: 5px;">Tag Cloud</h3>
                         <div class="d-flex flex-wrap m-n1">
                             <a href="" class="btn btn-outline-primary m-1">Design</a>
@@ -345,55 +360,49 @@
                 <div class="container-fluid py-5">
                     <div class="container pt-5 pb-3">
                         <div class="text-center mb-5">
-                            <h5 class="text-primary text-uppercase mb-3" style="letter-spacing: 5px;">Training</h5>
-                            <h1>Training Courses</h1>
+                            <h5 class="text-primary text-uppercase mb-3" style="letter-spacing: 5px;">clients</h5>
+                            <h1>Meet Our clients</h1>
                         </div>
                         <div class="row">
-                            <div class="col-md-6 col-lg-6 text-center team mb-4">
+                            <div class="col-md-6 col-lg-3 text-center team mb-4">
                                 <div class="team-item rounded overflow-hidden mb-2">
                                     <div class="team-img position-relative">
-                                        <img class="img-fluid" src="img/training/training-1.jpg" alt="">
+                                        <img class="img-fluid" src="img/team/team-1.jpg" alt="">
                                         <div class="team-social">
-                                            <a class="btn btn-outline-light mx-1" href="stock-market.html"
-                                                role="button">More Details</a>
-                                            <!-- <button class=" btn btn-outline-light mx-1">More Details</button> -->
-                                            <!-- <a class="btn btn-outline-light btn-square mx-1" href="#"><i
+                                            <a class="btn btn-outline-light btn-square mx-1" href="#"><i
                                                     class="fab fa-twitter"></i></a>
                                             <a class="btn btn-outline-light btn-square mx-1" href="#"><i
                                                     class="fab fa-facebook-f"></i></a>
                                             <a class="btn btn-outline-light btn-square mx-1" href="#"><i
-                                                    class="fab fa-linkedin-in"></i></a> -->
+                                                    class="fab fa-linkedin-in"></i></a>
                                         </div>
                                     </div>
-                                    <div class="bg-secondary p-4">
-                                        <h5 class="m-0">Stock Market</h5>
-                                        <!-- <p class="m-0">Stock Market</p> -->
+                                    <div class="bg-secondary p-3">
+                                        <h5>Singapore</h5>
+                                        <p class="m-0"></p>
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-md-6 col-lg-6 text-center team mb-4">
+                            <div class="col-md-6 col-lg-3 text-center team mb-4">
                                 <div class="team-item rounded overflow-hidden mb-2">
                                     <div class="team-img position-relative">
-                                        <img class="img-fluid" src="img/training/training-2.jpg" alt="">
+                                        <img class="img-fluid" src="img/team/team-2.jpg" alt="">
                                         <div class="team-social">
-                                            <a class="btn btn-outline-light mx-1" href="software-training.html"
-                                                role="button">More Details</a>
-                                            <!-- <button class="btn btn-outline-light mx-1"></button> -->
-                                            <!-- <a class="btn btn-outline-light btn-square mx-1" href="#"><i
+                                            <a class="btn btn-outline-light btn-square mx-1" href="#"><i
                                                     class="fab fa-twitter"></i></a>
                                             <a class="btn btn-outline-light btn-square mx-1" href="#"><i
                                                     class="fab fa-facebook-f"></i></a>
                                             <a class="btn btn-outline-light btn-square mx-1" href="#"><i
-                                                    class="fab fa-linkedin-in"></i></a> -->
+                                                    class="fab fa-linkedin-in"></i></a>
                                         </div>
                                     </div>
-                                    <div class="bg-secondary p-4">
-                                        <h5 class="m-0">Software Training</h5>
-                                        <!-- <p class="m-0">Software Training</p> -->
+                                    <div class="bg-secondary p-3">
+                                        <h5>Cyprus</h5>
+                                        <p class="m-0"></p>
                                     </div>
                                 </div>
                             </div>
-                            <!-- <div class="col-md-6 col-lg-3 text-center team mb-4">
+                            <div class="col-md-6 col-lg-3 text-center team mb-4">
                                 <div class="team-item rounded overflow-hidden mb-2">
                                     <div class="team-img position-relative">
                                         <img class="img-fluid" src="img/team/team-3.jpg" alt="">
@@ -406,13 +415,13 @@
                                                     class="fab fa-linkedin-in"></i></a>
                                         </div>
                                     </div>
-                                    <div class="bg-secondary p-4">
-                                        <h5>Jhon Doe</h5>
-                                        <p class="m-0">France</p>
+                                    <div class="bg-secondary p-3">
+                                        <h5>France</h5>
+                                        <p class="m-0"></p>
                                     </div>
                                 </div>
-                            </div> -->
-                            <!-- <div class="col-md-6 col-lg-3 text-center team mb-4">
+                            </div>
+                            <div class="col-md-6 col-lg-3 text-center team mb-4">
                                 <div class="team-item rounded overflow-hidden mb-2">
                                     <div class="team-img position-relative">
                                         <img class="img-fluid" src="img/team/team-4.jpg" alt="">
@@ -425,12 +434,12 @@
                                                     class="fab fa-linkedin-in"></i></a>
                                         </div>
                                     </div>
-                                    <div class="bg-secondary p-4">
-                                        <h5>Jhon Doe</h5>
-                                        <p class="m-0">Ireland</p>
+                                    <div class="bg-secondary p-3">
+                                        <h5>Ireland</h5>
+                                        <p class="m-0"></p>
                                     </div>
                                 </div>
-                            </div> -->
+                            </div>
                         </div>
                     </div>
                 </div>
