update css color
update css color

--- a/index.html
+++ b/index.html
@@ -676,11 +676,11 @@
                         <p><i class="fa fa-phone-alt mr-2"></i>+91 76718 17201</p>
                         <p><i class="fa fa-envelope mr-2"></i>hykinoverseas@gmail.com</p>
                         <div class="d-flex justify-content-start mt-4">
-                            <a class="btn btn-outline-light btn-square mr-2" href="#"><i class="fab fa-twitter"></i></a>
-                            <a class="btn btn-outline-light btn-square mr-2" href="#"><i
+                            <!-- <a class="btn btn-outline-light btn-square mr-2" href="#"><i class="fab fa-twitter"></i></a> -->
+                            <a class="btn btn-outline-light  btn-square mr-2" href="#"><i
                                     class="fab fa-facebook-f"></i></a>
                             <a class="btn btn-outline-light btn-square mr-2" href="#"><i
-                                    class="fab fa-linkedin-in"></i></a>
+                                    class="fab fa-youtube"></i></a>
                             <a class="btn btn-outline-light btn-square" href="#"><i class="fab fa-instagram"></i></a>
                         </div>
                     </div>
