--- a/index.html
+++ b/index.html
@@ -437,10 +437,9 @@
                         <h5 class="text-primary text-uppercase mb-3" style="letter-spacing: 5px;">Need Any Queries</h5>
                         <h1 class="text-white">Contact to Our Support Team</h1>
                     </div>
-                    <p class="text-white">Invidunt lorem justo sanctus clita. Erat lorem labore ea, justo dolor lorem
-                        ipsum ut sed eos,
-                        ipsum et dolor kasd sit ea justo. Erat justo sed sed diam. Ea et erat ut sed diam sea ipsum est
-                        dolor</p>
+                    <p class="text-white">When you need advanced technical help for issues that can’t be resolved with our knowledge base, you can always count on our friendly support agents. They provide assistance 24/7 via chat and tickets; phone support is available as well.
+
+                    </p>
                     <ul class="list-inline text-white m-0">
                         <li class="py-2"><i class="fa fa-check text-primary mr-3"></i>Labore eos amet dolor amet diam
                         </li>
