--- a/training.html
+++ b/training.html
@@ -255,11 +255,11 @@
                         <ul class="list-group list-group-flush">
                             <li class="list-group-item d-flex justify-content-between align-items-center px-0">
                                 <a href="" class="text-decoration-none h6 m-0">Stock Marketing</a>
-                                <span class="badge badge-primary badge-pill">150</span>
+                                <span class="badge badge-primary badge-pill"></span>
                             </li>
                             <li class="list-group-item d-flex justify-content-between align-items-center px-0">
                                 <a href="" class="text-decoration-none h6 m-0">Software Training</a>
-                                <span class="badge badge-primary badge-pill">131</span>
+                                <span class="badge badge-primary badge-pill"></span>
                             </li>
                             <!-- <li class="list-group-item d-flex justify-content-between align-items-center px-0">
                                 <a href="" class="text-decoration-none h6 m-0">Study in France</a>
